[package]
name = "crossterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true
lto = true

[lib]
crate-type = ["staticlib"]

[dependencies]
crossterm = "0.27"